# bazel-tour

./: .bazelrc  .gitignore  MODULE.bazel  README.md  run_cov.sh
cfg-bazel/py/requirements/: BUILD  requirements_dev_lock_3_10.txt  requirements_lock_3_10.txt  update_all.sh
cpp/: README.md
cpp_sanitizers/: README.md
grpc_cpp/: BUILD  greeter_client.cc  greeter_server.cc
grpc_go/client/: BUILD.bazel
grpc_go/server/: BUILD.bazel  main.go
grpc_py/: BUILD.bazel  client.py  resources.py  server.py
py/: hello_world.py
py3/: BUILD  greeter.py  hello_world.py  hello_world_test.py
pybind11/: README.md
